<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="diamond.com.comp.sam.diamondmanager.activity.Dashboard"
    tools:showIn="@layout/activity_dashboard">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:contentPadding="@dimen/general_padding"
        android:layout_marginBottom="@dimen/card_shadow_space"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:text="@string/behind_schedule" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/b_s_o_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/order_received"/>

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/b_s_w_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/worker_assigned"/>

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/b_s_w_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/worker_received"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:contentPadding="@dimen/general_padding"
        android:layout_marginBottom="@dimen/card_shadow_space"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:text="@string/scheduled_today" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_t_o_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/order_received_short"/>

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_t_w_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/worker_assigned_short"/>

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_t_w_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/worker_received_short"/>
                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_t_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:baseColor="@android:color/holo_green_dark"
                    app:labelText="\nReady"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:contentPadding="@dimen/general_padding"
        android:layout_marginBottom="@dimen/card_shadow_space"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scheduled_tomorrow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_r_o_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/order_received_short"/>

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_r_w_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/worker_assigned_short"/>

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_r_w_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:labelText="@string/worker_received"/>
                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/s_r_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:baseColor="@android:color/holo_green_dark"
                    app:labelText="\nReady"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:contentPadding="@dimen/general_padding"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:text="@string/till_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/a_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:baseColor="@android:color/holo_green_dark"
                    app:labelText="@string/ready"/>

                <diamond.com.comp.sam.diamondmanager.view.SummaryButton
                    android:id="@+id/a_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/general_padding"
                    app:baseColor="@android:color/holo_green_dark"
                    app:labelText="@string/client_delivered"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
