<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/general_margin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/status_view"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/summary_layer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/holo_orange_dark" />

        <RelativeLayout
            android:id="@+id/summary_layer"
            android:layout_toRightOf="@id/status_view"
            android:layout_toEndOf="@id/status_view"
            android:orientation="vertical"
            android:padding="@dimen/general_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_padding"
                android:text="@string/order_id" />

            <TextView
                android:id="@+id/order_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_padding"
                android:layout_toRightOf="@+id/customer_name_label"
                android:layout_toEndOf="@id/customer_name_label"
                android:text="@string/place_holder"/>

            <TextView
                android:id="@id/customer_name_label"
                android:padding="@dimen/general_padding"
                android:layout_below="@id/order_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name" />

            <TextView
                android:id="@+id/customer_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/order_id_label"
                android:layout_toRightOf="@+id/customer_name_label"
                android:padding="@dimen/general_padding"
                android:layout_toEndOf="@id/customer_name_label"
                android:text="@string/place_holder"/>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
