<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="diamond.com.comp.sam.diamondmanager.activity.ViewOrder"
    tools:showIn="@layout/activity_view_order">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/image_layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
<!--

            <TextView
                android:id="@+id/order_id__label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:padding="@dimen/general_padding" />


            <TextView
                android:id="@+id/order_id_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:padding="@dimen/general_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/text_value"/>
-->

            <TextView
                android:id="@+id/customer_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:padding="@dimen/general_padding" />

            <TextView
                android:id="@+id/customer_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:padding="@dimen/general_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/text_value"/>

            <TextView
                android:id="@+id/date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:padding="@dimen/general_padding"/>

            <android.support.v7.widget.CardView
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:padding="@dimen/general_padding"
                app:cardCornerRadius="@dimen/cardview_default_radius">

                <TextView
                    android:id="@+id/date_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/general_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_value"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/due_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:padding="@dimen/general_padding"/>

            <android.support.v7.widget.CardView
                android:id="@+id/due_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:padding="@dimen/general_padding"
                app:cardCornerRadius="@dimen/cardview_default_radius">

                <TextView
                    android:id="@+id/due_date_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/general_margin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_value"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/remark_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:padding="@dimen/general_padding"/>

            <EditText
                android:id="@+id/remark_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/text_value"/>

            <TextView
                android:id="@+id/worker_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worker"
                android:padding="@dimen/general_padding"/>

            <EditText
                android:id="@+id/worker_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/text_value"/>

            <TextView
                android:id="@+id/status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:padding="@dimen/general_padding"/>

            <Spinner
                android:id="@+id/status_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/status" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
